added banner area

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,59 @@ html,body {
     --open-sans: 'Open Sans',sans-serif;
 }
 
+/* Global CSS till navbar styling*/
 
+.title-text{
+    /* font property syntax 
+    font: font-style font-weight font-size/line-height font-family;
+    */
+    font: normal bold 50px/72px var(--open-sans);
+}
+
+/* Buttons */
+.button{
+    padding: .8rem 2.2rem;
+    font: normal 500 16px/20px var(--open-sans);
+    position: relative;
+    border: 3px solid transparent;
+    border-radius: 4px;
+}
+
+.button.primary-button{
+    background: var(--gradient-color);
+    background-clip: padding-box;
+    color: whitesmoke;
+    transition: background .6s ease;
+    box-shadow: var(--box-shadow);
+}
+
+.button.primary-button:hover{
+    background: whitesmoke;
+    background-clip: padding-box;
+    color: black;
+}
+
+.button.primary-button::after, .button.secondary-button::after{
+    position: absolute;
+    top: -2px; left: -2px;
+    bottom: -2px;  right: -2px;
+    background: var(--gradient-color);
+    content: ' ';
+    z-index: -1;
+    border-radius: 4px;
+}
+
+.button.secondary-button{
+    background: white;
+    background-clip: padding-box;
+    transition: background .6s ease;
+}
+
+.button.secondary-button:hover{
+    background: var(--gradient-color);
+    color: whitesmoke;
+    box-shadow: var(--box-shadow);
+}
 
 
 /* Navbar Styling */
@@ -34,10 +86,11 @@ html,body {
 }
  
 .header-area .main-menu .nav-item .nav-link {
-    font-family: var(--open-sans);
+    /* font property syntax 
+    font: font-style font-weight font-size/line-height font-family;
+    */
+    font: normal 700 12px/2px var(--open-sans);
     text-transform: uppercase;
-    font-weight: 700;
-    font-size: 12px;
     padding: 1.1rem;
     color: var(--title-color);
 }
@@ -55,3 +108,38 @@ html,body {
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
+
+/* Banner Area */
+
+.site-main .site-banner{
+    background: url(../assets/images/banner/home-banner.png)no-repeat 0% 50%;
+}
+
+.site-main .site-banner .site-title h3{
+    padding-top: 35%;
+    font-weight: 500;
+}
+
+.site-main .site-banner .site-title h3::after{
+    content: " ";
+    height: 2px;
+    width: 18vw;
+    background: black;
+    display: inline-block;
+    margin-left: 5%;
+    transform: translateY(-10px);
+}
+
+.site-main .site-banner .site-title h1{
+    font-size: 4rem;
+}
+
+.site-main .site-banner .site-title h4{
+    font-size: 1.5rem;
+}
+
+.site-main .site-banner .banner-image > img{
+    padding: 7rem 0;
+    width: 90rem;
+}
+
