--- a/css/style1.css
+++ b/css/style1.css
@@ -60,7 +60,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 /* Navbar Styling */
@@ -94,37 +94,34 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
-/* Banner Area */
 
-/* .site-main .site-banner{
-    background: url(../assets/images/banner/home-banner.png)no-repeat 0% 50%;
+/* Banner Styling */
+
+.site-banner .banner-area .author {
+    margin: 0;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-top: 40%;
 }
 
-.site-main .site-banner .site-title h3{
-    padding-top: 35%;
-    font-weight: 500;
+.site-banner .banner-area .author .author-img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin: auto;
+    background: url(../assets/images/banner/about.jpg) no-repeat;
+    background-size: 200%;
+    background-position: 40% 0;
 }
 
-.site-main .site-banner .site-title h3::after{
-    content: " ";
-    height: 2px;
-    width: 18vw;
-    background: black;
-    display: inline-block;
-    margin-left: 5%;
-    transform: translateY(-10px);
+.site-banner .banner-area .author .author-img h1{
+    font-family: var(--open-sans);
+    font-size: 40;
+    color:black;
 }
 
-.site-main .site-banner .site-title h1{
-    font-size: 4rem;
+.site-banner .banner-area .author .author-img h5{
+    font-size: 27;
 }
-
-.site-main .site-banner .site-title h4{
-    font-size: 1.5rem;
-}
-
-.site-main .site-banner .banner-image > img{
-    padding: 7rem 0;
-    width: 90rem;
-} */
-
