--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,27 @@
-/* Importing CSS Variables */
-@import url(./_variables.css);
+
+html,body {
+    margin: 0%;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+}
+
+/* CSS Variables */
+:root{
+    --primary-color: #4458dc;
+    --primary-color2: #854fee;
+    --title-color: #141313;
+    --text-color: #777777;  
+    --border-color: #201f1f17;  
+    --gradient-color: linear-gradient(90deg, #4458dc 0%, #854fee 100%);
+    --shadow-color:  0px 10px 30px rgba(118, 85, 225, 0.3);
+    --box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
+   
+
+    /* font family variables. */ 
+    --open-sans: 'Open Sans',cursive;
+}
 
 /* Global CSS till navbar styling*/
 
@@ -182,4 +204,19 @@
     color: white;
     opacity: 1;
 }
+.about {
+    padding-top: 2rem;
+    width: 100vw;
+}
+.about-me-text {
+    margin-bottom: 50px;
+    font-family: 'Ubuntu',sans-serif;
+    text-align: center;
+}
+
+.profile-image {
+    max-width: 100%;
+
+}
+
 
