--- a/css/style1.css
+++ b/css/style1.css
@@ -1,145 +1,42 @@
-html,body {
-    margin: 0%;
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
+/* display: table + margin: 0 auto ,encloses a div to the text only like in social icons */
+* {
+  color: whitesmoke;
+}
+html,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  font-family: 'Open Sans', sans-serif;
+}
+.bg-img {
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.6), 
+        rgba(0, 0, 0, 0.6)
+    ),
+    url(../assets/images/banner/Banner_image.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
+}
+.navbar .navbar-nav .nav-item.active .nav-link{
+  background-color: transparent;
+  color: #00B0DC;
+  border-radius: 0;
 }
 
-/* CSS Variables */
-:root{
-    --primary-color: #4458dc;
-    --primary-color2: #854fee;
-    --title-color: #141313;
-    --text-color: #777777;  
-    --border-color: #201f1f17;  
-    --gradient-color: linear-gradient(90deg, #4458dc 0%, #854fee 100%);
-    --shadow-color:  0px 10px 30px rgba(118, 85, 225, 0.3);
-    --box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
-   
-
-    /* font family variables. */ 
-    --open-sans: 'Open Sans',sans-serif;
+.navbar .navbar-nav .nav-item .nav-link:focus, .navbar .navbar-nav .nav-item .nav-link:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  color: #00B0DC;
 }
-
-/* Global CSS till navbar styling*/
-
-.title-text{
-    /* font property syntax 
-    font: font-style font-weight font-size/line-height font-family;
-    */
-    font: normal bold 50px/72px var(--open-sans);
+.navbar.navbar-transparent {
+    padding-top: 0;
 }
-
-/* Buttons */
-.button{
-    padding: .8rem 2.2rem;
-    font: normal 500 16px/20px var(--open-sans);
-    position: relative;
-    border: 3px solid transparent;
-    border-radius: 4px;
-}
-
-.button.primary-button{
-    background: var(--gradient-color);
-    background-clip: padding-box;
-    color: whitesmoke;
-    transition: background .6s ease;
-    box-shadow: var(--box-shadow);
-}
-
-.button.primary-button:hover{
-    background: whitesmoke;
-    background-clip: padding-box;
-    color: black;
-}
-
-.button.primary-button::after, .button.secondary-button::after{
-    position: absolute;
-    top: -2px; left: -2px;
-    bottom: -2px;  right: -2px;
-    background: var(--gradient-color);
-    content: ' ';
-    z-index: -1;
-    border-radius: 4px;
-}
-
-.button.secondary-button{
-    background: white;
-    background-clip: padding-box;
-    transition: background .6s ease;
-}
-
-.button.secondary-button:hover{
-    background: var(--gradient-color);
-    color: whitesmoke;
-    box-shadow: var(--box-shadow);
-}
-
-
-/* Navbar Styling */
-.header-area .main-menu .navbar .navbar-brand {
-    padding: 0 2rem 0 5rem;
-}
-
-.header-area .main-menu .navbar {
-    padding: 1rem 14rem 1rem 13rem;
-}
- 
-.header-area .main-menu .nav-item .nav-link {
-    /* font property syntax 
-    font: font-style font-weight font-size/line-height font-family;
-    */
-    font: normal 700 12px/2px var(--open-sans);
-    text-transform: uppercase;
-    padding: 1.1rem;
-    color: var(--title-color);
-}
-
-.header-area .main-menu .navbar-nav .active a{
-    background: var(--gradient-color);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-}
-
-.header-area .main-menu .navbar-nav a:hover{
-    background: var(--gradient-color);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-}
-
-/* Banner Area */
-
-.site-main .site-banner{
-    background: url(../assets/images/banner/home-banner.png)no-repeat 0% 50%;
-}
-
-.site-main .site-banner .site-title h3{
-    padding-top: 35%;
-    font-weight: 500;
-}
-
-.site-main .site-banner .site-title h3::after{
-    content: " ";
-    height: 2px;
-    width: 18vw;
-    background: black;
-    display: inline-block;
-    margin-left: 5%;
-    transform: translateY(-10px);
-}
-
-.site-main .site-banner .site-title h1{
-    font-size: 4rem;
-}
-
-.site-main .site-banner .site-title h4{
-    font-size: 1.5rem;
-}
-
-.site-main .site-banner .banner-image > img{
-    padding: 7rem 0;
-    width: 90rem;
-}
-
+/* .navbar.navbar-transparent .navbar-toggler .navbar-toggler-icon {
+  background-color: whitesmoke;
+} */
