--- a/css/style1.css
+++ b/css/style1.css
@@ -6,9 +6,10 @@ body {
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
-  color: black;
+  color: whitesmoke;
+  /* background: url("../assets/images/bg.jpg"); */
 }
-.bg-img {
+/* .bg-img {
     background: linear-gradient(
         rgba(0, 0, 0, 0.6), 
         rgba(0, 0, 0, 0.6)
@@ -18,7 +19,7 @@ body {
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
-}
+} */
 /* Start Header Styles */
 
 .navbar .navbar-nav .nav-item.active .nav-link{
@@ -61,13 +62,11 @@ body {
   padding-bottom: 25px;
   text-transform: uppercase;
   font-size: 2.5rem;
-  color: white;
   text-align: center;
 }
 
 .type-effect{
   font-size: 1.3rem;
-  color: white;
   text-align: center;
 }
 
@@ -91,13 +90,11 @@ body {
 
 .social-icons ul .list a .icon-white{
   font-size: 22px;
-  color: white;
   opacity: 0.6;
 }
 
 .social-icons ul .list a .icon-white:hover{
   font-size: 22px;
-  color: white;
   opacity: 1;
 }
 
