--- a/css/style1.css
+++ b/css/style1.css
@@ -7,7 +7,7 @@ body {
   box-sizing: border-box;
   overflow-x: hidden;
   color: whitesmoke;
-  /* background: url("../assets/images/bg.jpg"); */
+  background: url(../assets/images/bg.jpg);
 }
 /* .bg-img {
     background: linear-gradient(
