--- a/css/style1.css
+++ b/css/style1.css
@@ -7,7 +7,7 @@ body {
   box-sizing: border-box;
   overflow-x: hidden;
   color: whitesmoke;
-  background-color: #212121;
+  background-color: black;
 }
 
 /* Start Header Styles */
