--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
-  color: whitesmoke;
+  color: #f0f0f0;
   background-color: #121212;
 }
 
