dark mode complete

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ body {
 
 /* Start Header Styles */
 
+/* To override material css */
+.navbar {
+  background-color: rgba(51, 51, 51, 0.7)!important;
+  color: #ffffff;
+}
 .navbar .navbar-nav .nav-item.active .nav-link{
   background-color: transparent;
   color: #03DAC6;
@@ -25,6 +30,28 @@ body {
 }
 .navbar.navbar-transparent {
     padding-top: 0.3rem;
+}
+.navbar .navbar-toggler .navbar-toggler-icon {
+  background-color: #fff;
+}
+/* To override material css */
+@media (max-width: 991px)
+{
+  .navbar-collapse:after{
+    background-color: #121212;
+  }
+  .navbar-collapse .navbar-nav .nav-item .nav-link{
+    color: #ffffff;
+  }
+  /* To get rid of default lines between two nav items */
+  .navbar-collapse .navbar-nav .nav-item:after{
+    background-color: transparent;
+  }
+  /* For active nav item */
+  .navbar-collapse .navbar-nav .nav-item.active .nav-link:active, .navbar-collapse .navbar-nav .nav-item.active .nav-link:focus, .navbar-collapse .navbar-nav .nav-item.active .nav-link:hover{
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #03DAC6;
+  }
 }
 
 /* End Header Styles */
