--- a/css/style.css
+++ b/css/style.css
@@ -154,5 +154,32 @@ body {
   justify-content: center;
 }
 .bmd-form-group label {
-  color: black;
+  color: white;
+}
+.is-focused [class*=" bmd-label"],.is-focused [class^=bmd-label] {
+  color: #03DAC6;
+}
+/* Modal */
+.modal-content {
+  background-color: #121212;
+}
+/* For X sign */
+.modal .modal-header .close {
+  color: #ffffff;
+}
+.form-control, .is-focused .form-control {
+  background-image: linear-gradient(0deg,#03DAC6 2px,rgba(156,39,176,0) 0),linear-gradient(0deg,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
+}
+.form-control:invalid {
+  background-image: linear-gradient(0deg,#CF6679 2px,rgba(244,67,54,0) 0),linear-gradient(0deg,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
+}
+/* Typing text */
+.form-control{
+  color: #ffffff;
+}
+.form-control:focus {
+  color: #ffffff;
+}
+.btn{
+  background-color: #03DAC6;
 }
