--- a/css/style.css
+++ b/css/style.css
@@ -168,10 +168,10 @@ body {
   color: #ffffff;
 }
 .form-control, .is-focused .form-control {
-  background-image: linear-gradient(0deg,#03DAC6 2px,rgba(156,39,176,0) 0),linear-gradient(0deg,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
+  background-image: linear-gradient(0deg,rgba(0, 255, 0, 0.4) 2px,rgba(156,39,176,0) 0),linear-gradient(0deg,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
 }
 .form-control:invalid {
-  background-image: linear-gradient(0deg,#CF6679 2px,rgba(244,67,54,0) 0),linear-gradient(0deg,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
+  background-image: linear-gradient(0deg,rgba(255, 0, 0, 0.6) 2px,rgba(244,67,54,0) 0),linear-gradient(0deg,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
 }
 /* Typing text */
 .form-control{
