--- a/css/style.css
+++ b/css/style.css
@@ -12,24 +12,31 @@ body {
 
 /* Start Header Styles */
 
+.banner-bg {
+  background-image: url(../pexels-eberhard-grossgasteiger-1421903.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height:100vh;
+}
 /* To override material css */
 .navbar {
-  background-color: rgba(51, 51, 51, 0.7)!important;
+  background-color: rgba(51, 51, 51, 0.8)!important;
   color: #ffffff;
+  padding: 0.5rem 0;
 }
 .navbar .navbar-nav .nav-item.active .nav-link{
   background-color: transparent;
   color: #03DAC6;
   border-radius: 0;
 }
-
+.navbar.navbar-transparent {
+  padding: 0.5rem 0;
+}
 .navbar .navbar-nav .nav-item .nav-link:focus, .navbar .navbar-nav .nav-item .nav-link:hover {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 40px;
   color: #03DAC6;
-}
-.navbar.navbar-transparent {
-    padding-top: 0.3rem;
 }
 .navbar .navbar-toggler .navbar-toggler-icon {
   background-color: #fff;
