--- a/css/style.css
+++ b/css/style.css
@@ -95,14 +95,13 @@ body {
 }
 
 .social-icons {
-  padding-top: 20px;
+  margin-top: 20px;
+  border-radius: 40px;
+  background-color: rgb(51, 51, 51);
 }
 
 .social-icons ul {
-  padding-top: 20px;
-  width: 20rem;
-  height: 2rem;
-  padding:0;
+  padding: 5px 20px;
   text-align: center;
 }
 .social-icons ul .list {
@@ -110,15 +109,18 @@ body {
   padding-right: 8px;
   list-style: none;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .social-icons ul .list a .icon-white{
-  font-size: 22px;
+  color: white;
+  font-size: 1.4rem;
   opacity: 0.6;
 }
 
 .social-icons ul .list a .icon-white:hover{
-  font-size: 22px;
+  color: white;
+  font-size: 1.4rem;
   opacity: 1;
 }
 
