--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 /* Start Header Styles */
 
 .banner-bg {
-  background-image: url(../pexels-eberhard-grossgasteiger-1421903.jpg);
+  background-image: url(../346995.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   width: 100vw;
@@ -45,7 +45,7 @@ body {
 @media (max-width: 991px)
 {
   .navbar-collapse:after{
-    background-color: #121212;
+    background-color: rgba(51,51,51);
   }
   .navbar-collapse .navbar-nav .nav-item .nav-link{
     color: #ffffff;
@@ -131,6 +131,7 @@ body {
 .about-me-text {
   font-size: 3rem;
   margin-bottom: 5vh;
+  margin-top: 0;
 }
 
 /* End About Me Styles */
