--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 /* To override material css */
 .navbar {
-  background-color: rgba(51, 51, 51, 0.8)!important;
+  background-color: rgba(51, 51, 51, 0.9)!important;
   color: #ffffff;
   padding: 0.5rem 0;
 }
@@ -45,7 +45,7 @@ body {
 @media (max-width: 991px)
 {
   .navbar-collapse:after{
-    background-color: rgba(51,51,51);
+    background-color: #121212;
   }
   .navbar-collapse .navbar-nav .nav-item .nav-link{
     color: #ffffff;
@@ -144,11 +144,10 @@ body {
   list-style: none;
 }
 .experience-list-item {
-  padding: 0 1rem 0 1rem;
+  padding: 0 0.8rem 0 0.8rem;
 }
 .experience-list-item:hover,.experience-list-item:active {
-  padding: 0 1rem 0 1rem;
-  border-left: 2px solid blue;
+  border-left: 1px solid #03DAC6;
 }
 .skill-list {
   padding: 0;
